--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
   <input
     type="text"
     id="speechText"
-    placeholder="Ask Aria something..."
+    placeholder="Ask Pramit something..."
     size="50"
     required
   />
@@ -16,7 +16,7 @@
 </form>
 
 <div id="responseBox" style="margin-top: 30px; display: none">
-  <h3>Aria says:</h3>
+  <h3>Pramit says:</h3>
   <p id="responseText" style="font-size: 18px"></p>
 </div>
 
