--- a/src/main/resources/static/classify.html
+++ b/src/main/resources/static/classify.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,7 +24,12 @@
             });
 
             const text = await res.text();
-            document.getElementById('result').textContent = text;
+            
+            if (text.trim().toLowerCase() === "unknown") {
+                window.location.href = "/index.html";
+            } else {
+                document.getElementById('result').textContent = text;
+            }
         }
     </script>
 </body>
